# SciFiReaders

./: .gitignore  BrukerSpectrum1.spx  HeliosSpectrum.spc  extras_require.txt  pyproject.toml  setup.py
.github/workflows/: actions.yml
SciFiReaders/readers/microscopy/em/sem/: bruker_reader.py
SciFiReaders/readers/microscopy/em/tem/: emd_reader.py  mrc_reader.py
SciFiReaders/readers/microscopy/spm/afm/: mdt.py
notebooks/01_using_readers/: Write_sidpy to_NeXus.ipynb  read_NeXus.ipynb  read_nexus_files.ipynb
tests/: test_hyperspy_converter.py
tests/readers/SID/: test_nsid_reader.py  test_usid_reader.py
tests/readers/converters/: test_hyperspy.py
tests/readers/microscopy/em/tem/: test_Nion_reader.py  test_dm_reader.py  test_emd_reader.py  test_mrc_reader.py
tests/readers/microscopy/spm/afm/: test_arhdf5.py  test_axz.py  test_bruker.py  test_gwy.py  test_igor.py  test_mdt.py  test_wsxm.py
tests/readers/microscopy/spm/stm/: test_nanonis.py
